# ClosedIV

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_vs2022.bat  readme.md  release.bat
.github/workflows/: build.yaml
src/: main.cpp  main.h
src/gtav/rage/: fiDevice.cpp  fiDevice.h  fiPackfile.h
src/hooks/: CustomDevice.cpp  FileReadHooks.cpp  MPDLCMapHooks.cpp  PackfileEncryptionHooks.cpp
src/utils/: config.h  log.cpp  log.h  memory.h  rpf.h
